replica-set.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sharing
spec:
  selector:
    matchLabels:
      run: data-sharing
  replicas: 1
  template:
    metadata:
      labels:
        run: data-sharing
    spec:
      containers:
        - name: data-sharing
          image: acezhang18/data-sharing-demo
          ports:
            - containerPort: 8080
              protocol: TCP
