endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: data-sharing
subsets:
  - addresses:
      - ip: 192.0.2.42
    ports:
      - port: 9376
