service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-sharing
spec:
  type: "LoadBalancer"
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    name: data-sharing
